fix(form): remove scrollbar on textarea on IE so that it looks like all other browsers
346

--- a/core/scss/elements/_forms.scss
+++ b/core/scss/elements/_forms.scss
@@ -183,6 +183,7 @@ textarea {
   height: 12em;
   padding-top: 18px;
   line-height: $body-line-height;
+  overflow: auto;
 }
 
 //
